@@ -380,7 +380,7 @@ footer {
             }
             .nav-panel {
                 display: inline-block; left: unset; overflow-x: hidden;
-                top: 1.6rem; width: 0;
+                top: 1.25rem; width: 0;
             }
         }
         li.global:hover .nav-panel {
@@ -523,10 +523,9 @@ footer {
                 border: 2px outset #colours[button-border];
                 border-radius: 50px; color: #colours[link];
                 cursor: pointer; display: inline-block;
-                line-height: 0.8rem; margin: 0.5rem 0; overflow: hidden;
+                line-height: 0.8rem; margin-bottom: 0.5rem; overflow: hidden;
                 padding: 0.25rem 0.75rem; position: relative;
-                text-decoration: none;
-                transition: border 500ms, color 500ms;
+                text-decoration: none; transition: border 500ms, color 500ms;
                 span {
                     font-family: #fonts[system];
                     font-size: 0.7rem; letter-spacing: 0.1rem;
