@@ -1,5 +1,6 @@
 Revision history for Web::Components
 
+          - Improved modal event handling
           - Adjusted main container and footer CSS
           - Fixes unwanted calls to unload from modal forms
           - Fixed footer to bottom of main in CSS
